k8s/policies/robot-factory-l7-policy.yaml
---
# Cilium Network Policy with L7 HTTP Visibility for Robot Factory
# This enables hubble_http_* metrics collection

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: robot-factory-l7-visibility
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: robot-factory
  ingress:
  - fromEndpoints:
    - {}
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
        - method: "POST"
        - method: "PUT"
        - method: "DELETE"
  egress:
  - toEndpoints:
    - {}
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - {}
    toRequires:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEndpoints:
    - {}
    icmps:
    - fields:
      - type: 128
        family: IPv6
      - type: 8
        family: IPv4

---
# Also enable visibility for telemetry-upload so we can see when it gets throttled
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: telemetry-upload-l7-visibility
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: telemetry-upload
  ingress:
  - fromEndpoints:
    - {}
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
        - method: "POST"
  egress:
  - toEndpoints:
    - {}
